# blyjections

./: .gitignore  README.md  environment.yml  pyproject.toml
examples/: examples.py  simple_mod.ipynb
scripts/: config.yaml  create_data.py  dev.ipynb  dev.py  pull_schedule.py  tester.py
scripts/blyjections/: app.R  dev.R  utils.R
scripts/blyjections/data/: batting_seasons.parquet
scripts/data/: pitching_seasons.parquet  player_ids.parquet
src/blyjections/: clean.py  data.py  utils.py  yoy.py
