[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blyjections"
version = "0.0.1"
authors = [
  { name="Andrew Patton", email="anpatt7@gmail.com" },
]
description = "Fantasy baseball projections guaranteed to help you finish second to last"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn",
    "scipy",
    "polars",
    "datetime",
    "numpy",
    "pyyaml",
    "typing",
]

[project.urls]
"Homepage" = "https://github.com/anpatt7/blyjections"